# goligoli-backend-rust

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  diesel.toml  docker-compose.yml
credentials/: cert.pem  key.pem
src/: danmaku.rs  db.rs  main.rs  migrate.rs  route.rs  user.rs  video.rs
src/controller/: mod.rs
src/controller/danmaku/: danmaku.rs  mod.rs
src/controller/user/: mod.rs  user.rs
src/controller/video/: mod.rs
src/models/: danmaku.rs  mod.rs  user.rs  video.rs
src/schema/: mod.rs
