cargo-features = ["edition"]

[package]
name = "goligoli-backend-rust"
version = "0.1.0"
authors = ["FourierMeow <41997567+FourierMeow@users.noreply.github.com>"]
license = "MIT"
edition = '2018'

[dependencies]
actix-web = "0.7.7"

[dev-dependencies]
pretty_env_logger = "0.2.4"
pretty_assertions = "0.5.1"